adding meta tags for LinkedIn feature image

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang=”en” prefix=”og: http://ogp.me/ns#">
+<html lang=”en” prefix=”og: https://sandyvasquez.dev/index.html">
 
 <head>
   <!-- for linkedin feature image -->
   <meta name="title" property="og:title" content="Portfolio">
   <meta name="image" property="og:image" content="https://i.ibb.co/7jzBKtN/portfolio-background.jpg">
   <meta name="description" property="og:description" content="A sample of my coding projects">
-  <meta property='og:url' content='https://sandyvasquez.dev/'/>
+  <meta property='og:url' content='https://sandyvasquez.dev/index.html'/>
   <meta name="author" content="Sandy Vasquez">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
