--- a/www_sandyvasquez.dev/portfolio.html
+++ b/www_sandyvasquez.dev/portfolio.html
@@ -49,9 +49,9 @@
           </p>
           <p>
             <a href="https://github.com/spv-hub/myZooKeeper"><span class="iconify-inline" data-icon="openmoji:github"
-                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+                data-width="200" data-height="22" id="iconify-inline-github"></span></a>
 
-            <a href="https://vimeo.com/669354435"><span class="iconify-inline" data-icon="noto:link" data-width="18"
+            <a href="https://vimeo.com/669354435"><span class="iconify-inline" data-icon="noto:link" data-width="100"
                 data-height="18"></span></a>
           </p>
         </article>
@@ -74,9 +74,9 @@
           </p>
           <p>
             <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline"
-                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+                data-icon="openmoji:github" data-width="200" data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://ride-share-service.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                data-width="18" data-height="18"></span></a>
+                data-width="100" data-height="18"></span></a>
           </p>
         </article>
       </div>
@@ -93,9 +93,9 @@
           </p>
           <p>
             <a href="https://github.com/spv-hub/media-ranker"><span class="iconify-inline" data-icon="openmoji:github"
-                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+                data-width="200" data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://media-ranker-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                data-width="18" data-height="18"></span></a>
+                data-width="100" data-height="18"></span></a>
           </p>
         </article>
       </div>
@@ -113,9 +113,9 @@
             The end product allows users to search for a video, select a video,  add a video to the video library,  and see a list of customers. The end product should be deployable to Heroku.   
           </p>
           <p>
-            <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+            <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="200"
                 data-height="22" id="iconify-inline-github"></span></a>
-            <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18"
+            <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="100"
                 data-height="18"></span></a>
           </p>
         </article>
@@ -130,10 +130,10 @@
             The pages for this project will be the pieces of an online book review site. Semantic HTML tags that provide meaning and structure to the content. Additional functionality includes a PHP contact form and mobile-friendly design.
           </p>
           <p>
-            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="200"
                 data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                data-width="18" data-height="18"></span></a>
+                data-width="100" data-height="18"></span></a>
           </p>
         </article>
       </div>
@@ -156,9 +156,9 @@
           </ol>
             <p>
               <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="openmoji:github"
-                  data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+                  data-width="200" data-height="22" id="iconify-inline-github"></span></a>
               <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="noto:link"
-                  data-width="18" data-height="18"></span></a>
+                  data-width="100" data-height="18"></span></a>
             </p>
         </article>
       </div>
@@ -175,9 +175,9 @@
           </p>
           <p>
             <a href="https://github.com/spv-hub/exquisite-react"><span class="iconify-inline"
-                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+                data-icon="openmoji:github" data-width="200" data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://exquisite-react-app.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                data-width="18" data-height="18"></span></a>
+                data-width="100" data-height="22"></span></a>
           </p>
         </article>
       </div>
@@ -202,9 +202,9 @@
           </ol>
           <p>
             <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="openmoji:github"
-                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+                data-width="200" data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view"><span
-                class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+                class="iconify-inline" data-icon="noto:link" data-width="100" data-height="18"></span></a>
           </p>
         </article>
       </div>
@@ -219,9 +219,9 @@
           </p>
           <p>
             <a href="https://github.com/jwinchan/react-tic-tac-toe"><span class="iconify-inline"
-                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+                data-icon="openmoji:github" data-width="200" data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://tic-x-tac-o-toe.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                data-width="18" data-height="18"></span></a>
+                data-width="100" data-height="18"></span></a>
           </p>
         </article>
       </div>
@@ -229,11 +229,11 @@
   </div>
   <footer class="footer">
     <p class="p-footer">
-      <a href="https://www.linkedin.com/in/vasquezsandy/"><span class="iconify-inline" data-icon="logos:linkedin-icon"
+      <a href="https://www.linkedin.com/in/tosandyvasquez/"><span class="iconify-inline" data-icon="logos:linkedin-icon"
           id="iconify-inline-linkedin"></span></a>
-      <a href="https://twitter.com/_Ms_Luz_/"><span class="iconify-inline" data-icon="logos:twitter"
-          id="iconify-inline-gmail"></span></a>
-      <a href="mailto:spv@mail.com?subject=The%20subject%20of%20the%20mail"><span class="iconify-inline"
+      <a href="https://github.com/crypt0kitty"><span class="iconify-inline" data-icon="openmoji:github"
+        data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+      <a href="mailto:sandyvasquez@proton.me?subject=The%20subject%20of%20the%20mail"><span class="iconify-inline"
           data-icon="icon-park:mail" id="iconify-inline-twitter"></span></a>
     </p>
     © 2022 Sandy Vasquez - powered by Heroku
