testing heroku deployment

--- a/www_sandyvasquez.dev/portfolio.html
+++ b/www_sandyvasquez.dev/portfolio.html
@@ -38,14 +38,7 @@
         <article>
           <span class="app-title">Pet Calendar App</span>
           <p class="app-text">
-            The Capstone Project is the final project at Ada. Students must pursue a concept and develop their project
-            to demonstrate an end solution. 
-            <br><br>
-            My partner and I decided to develop a pet note-taking app written in Swift.
-            The app tagline is <em>“pet-care made easy.”</em>
-            <br><br>
-            I developed the walkthrough onboarding page, Google auth login, app icon, home, and reminders functionality.
-            Later on, I improved upon the notes feature to match the reminders screen.
+            My Capstone Project written in Swfit! This was my first iphone app. Click on the link to see the demo. 
           </p>
           <p>
             <a href="https://github.com/spv-hub/myZooKeeper"><span class="iconify-inline" data-icon="openmoji:github"
