--- a/www_sandyvasquez.dev/index.html
+++ b/www_sandyvasquez.dev/index.html
@@ -8,7 +8,7 @@
   <meta name="description" property="og:description" content="A sample of my coding projects">
   <meta property='og:url' content='https://sandyvasquez.dev/index.html'/>
   <meta name="author" content="Sandy Vasquez">
-  <meta charset="utf-8" />
+  <meta charset="utf-8" /heroku ps -a>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sandy Vasquez: Portfolio</title>
   <!-- favicon -->
