Adding link to images

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,19 +33,13 @@
   <div class="band">
     <div class="item-1">
       <div class="card">
-        <div class="thumb-1"
-          style="background-image: url(https://i.ibb.co/XVd2mNJ/0-C213537-9-EF8-4-E43-809-B-9-A8-CFE795352.png);"></div>
+       <a href="https://vimeo.com/669354435">
+        <div class="thumb-1" style="background-image: url(https://i.ibb.co/XVd2mNJ/0-C213537-9-EF8-4-E43-809-B-9-A8-CFE795352.png);"></div>
+      </a>
         <article>
           <span class="app-title">Pet Calendar App</span>
           <p class="app-text">
-            The Capstone Project is the final project at Ada. Students must pursue a concept and develop their project
-            to demonstrate an end solution. 
-            <br><br>
-            My partner and I decided to develop a pet note-taking app written in Swift.
-            The app tagline is <em>“pet-care made easy.”</em>
-            <br><br>
-            I developed the walkthrough onboarding page, Google auth login, app icon, home, and reminders functionality.
-            Later on, I improved upon the notes feature to match the reminders screen.
+           My Capstone Project Written in Swift! 
           </p>
           <p>
             <a href="https://github.com/spv-hub/myZooKeeper"><span class="iconify-inline" data-icon="openmoji:github"
@@ -60,7 +54,9 @@
 
     <div class="item-1">
       <div class="card">
+        <a href="https://ride-share-service.herokuapp.com">
         <div class="thumb-5" style="background-image: url(https://i.ibb.co/sW20Kys/ride.png);"></div>
+        </a>
         <article>
           <span class="app-title">Ride Share Rails</span>
           <p class="app-text">
@@ -83,7 +79,9 @@
     </div>
     <div class="item-1">
       <div class="card">
+        <a href="https://media-ranker-digest.herokuapp.com/">
         <div class="thumb-3" style="background-image: url(https://i.ibb.co/X8BMp5J/media.png);"></div>
+        </a>
         <article>
           <span class="app-title">Media Ranker Digest</span>
           <p class="app-text">
@@ -102,7 +100,9 @@
     </div>
     <div class="item-1">
       <div class="card">
+        <a href="https://bit.ly/3EMxxG2">
         <div class="thumb-5" style="background-image: url(https://i.ibb.co/NC74wMy/movies.jpg);"></div>
+        </a>
         <article>
           <span class="app-title">Video Rental Store</span>
           <p class="app-text">
@@ -123,7 +123,9 @@
     </div>
     <div class="item-1">
       <div class="card">
+        <a href="https://ruby-digest.herokuapp.com/">
         <div class="thumb-books" style="background-image: url(https://i.ibb.co/FmvrjyN/test2.png);"></div>
+        </a>
         <article>
           <span class="app-title">Book Review Site</span>
           <p class="app-text">
@@ -140,7 +142,9 @@
     </div>
     <div class="item-2">
       <div class="card">
+        <a href="https://github.com/spv-hub/slack-cli">
         <div class="slack" style="background-image: url(https://i.ibb.co/GptD16v/Untitled-design.png);"></div>
+        </a>
         <article>
           <span class="app-title">Slack Cli App</span>
 
@@ -165,7 +169,9 @@
     </div>
     <div class="item-2">
       <div class="card">
+        <a href="https://exquisite-react-app.herokuapp.com/">
         <div class="blocks" style="background-image: url(https://i.ibb.co/mRRP9vf/blocks.jpg);"></div>
+        </a>
         <article>
           <span class="app-title">Exquisite React App</span>
           <p class="app-text">
@@ -184,7 +190,9 @@
     </div>
     <div class="item-2">
       <div class="card">
+        <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view">
         <div class="thumb-solar" style="background-image: url(https://i.ibb.co/FWSjYRJ/shutterstock-image.png);"></div>
+        </a>
         <article>
           <span class="app-title">Solar System CLI</span>
           <p class="app-text-1">Upon execution, the CLI program outputs the following:</p>
@@ -211,7 +219,9 @@
     </div>
     <div class="item-2">
       <div class="card">
+        <a href="https://tic-x-tac-o-toe.herokuapp.com/">
         <div class="slack" style="background-image: url(https://i.ibb.co/84P2pBg/XO.png);"></div>
+        </a>
         <article>
           <span class="app-title">Tic-Tac-Toe</span>
           <p class="app-text">
