updating footer links

--- a/portfolio.html
+++ b/portfolio.html
@@ -239,11 +239,11 @@
   </div>
   <footer class="footer">
     <p class="p-footer">
-      <a href="https://www.linkedin.com/in/vasquezsandy/"><span class="iconify-inline" data-icon="logos:linkedin-icon"
+      <a href="https://www.linkedin.com/in/tosandyvasquez/"><span class="iconify-inline" data-icon="logos:linkedin-icon"
           id="iconify-inline-linkedin"></span></a>
-      <a href="https://twitter.com/_Ms_Luz_/"><span class="iconify-inline" data-icon="logos:twitter"
+      <a href="https://twitter.com/crypt0ktty/"><span class="iconify-inline" data-icon="logos:twitter"
           id="iconify-inline-gmail"></span></a>
-      <a href="mailto:spv@mail.com?subject=The%20subject%20of%20the%20mail"><span class="iconify-inline"
+      <a href="mailto:sandyvasquez@proton.me?subject=The%20subject%20of%20the%20mail"><span class="iconify-inline"
           data-icon="icon-park:mail" id="iconify-inline-twitter"></span></a>
     </p>
     © 2022 Sandy Vasquez - powered by Heroku
